--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,9 @@
-absl-py==2.1.0
-annotated-types==0.7.0
-asttokens==2.4.1
-astunparse==1.6.3
-attrs==24.2.0
-backcall==0.2.0
-beautifulsoup4==4.12.3
-bertopic==0.16.4
-bleach==6.2.0
-blinker==1.9.0
-blis==1.0.1
-catalogue==2.0.10
-certifi==2024.8.30
-charset-normalizer==3.4.0
-click==8.1.7
-cloudpathlib==0.20.0
-colorama==0.4.6
-comm==0.2.2
-confection==0.1.5
-contourpy==1.3.0
-cycler==0.12.1
-cymem==2.0.10
-dash==2.18.2
-dash-core-components==2.0.0
-dash-design-kit==0.0.1
-dash-html-components==2.0.0
-dash-table==5.0.0
-debugpy==1.8.7
-decorator==5.1.1
-defusedxml==0.7.1
-docopt==0.6.2
-en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl#sha256=1932429db727d4bff3deed6b34cfc05df17794f4a52eeb26cf8928f7c1a0fb85
-exceptiongroup==1.2.2
-executing==2.1.0
-fastjsonschema==2.21.1
-filelock==3.16.1
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.54.1
-fsspec==2024.10.0
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.67.1
-h5py==3.12.1
-hdbscan==0.8.40
-huggingface-hub==0.26.2
-idna==3.10
-importlib_metadata==8.5.0
-importlib_resources==6.4.5
-ipykernel==6.29.5
-ipython==8.12.3
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
-keras==3.6.0
-kiwisolver==1.4.7
-langcodes==3.5.0
-language_data==1.3.0
-libclang==18.1.1
-llvmlite==0.43.0
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.2
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-mdurl==0.1.2
-mistune==3.0.2
-ml-dtypes==0.4.1
-mpmath==1.3.0
-murmurhash==1.0.11
-namex==0.0.8
-nbclient==0.10.1
-nbconvert==7.16.4
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.2.1
-nltk==3.9.1
-numba==0.60.0
-numpy==2.0.2
-opt_einsum==3.4.0
-optree==0.13.0
-packaging==24.1
-pandas==2.2.3
-pandocfilters==1.5.1
-parso==0.8.4
-pickleshare==0.7.5
-pillow==11.0.0
-pipreqs==0.5.0
-platformdirs==4.3.6
-plotly==5.24.1
-preshed==3.0.9
-prompt_toolkit==3.0.48
-protobuf==5.28.3
-psutil==6.1.0
-pure_eval==0.2.3
-pydantic==2.10.2
-pydantic_core==2.27.1
-Pygments==2.18.0
-pynndescent==0.5.13
-pyparsing==3.2.0
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==308
-PyYAML==6.0.2
-pyzmq==26.2.0
-referencing==0.35.1
-regex==2024.9.11
-requests==2.32.3
-retrying==1.3.4
-rich==13.9.3
-rpds-py==0.22.3
-safetensors==0.4.5
-scikit-learn==1.5.2
-scipy==1.13.1
-sentence-transformers==3.2.1
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.5
-soupsieve==2.6
-spacy==3.8.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-srsly==2.4.8
-stack-data==0.6.3
-sympy==1.13.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-io-gcs-filesystem==0.31.0
-tensorflow_intel==2.18.0
-termcolor==2.5.0
-tf_keras==2.18.0
-thinc==8.3.2
-threadpoolctl==3.5.0
-tinycss2==1.4.0
-tokenizers==0.20.1
-torch==2.5.1
-tornado==6.4.1
-tqdm==4.66.6
-traitlets==5.14.3
-transformers==4.46.1
-typer==0.13.1
-typing_extensions==4.12.2
-tzdata==2024.2
-umap-learn==0.5.7
-urllib3==2.2.3
-wasabi==1.1.3
-wcwidth==0.2.13
-weasel==0.4.1
-webencodings==0.5.1
-Werkzeug==3.0.6
-wrapt==1.16.0
-yarg==0.1.9
-zipp==3.20.2
+pandas~=2.2.3
+plotly~=5.24.1
+dash~=2.18.2
+torch~=2.5.1
+numpy~=2.0.2
+matplotlib~=3.9.2
+spacy~=3.8.3
+transformers~=4.46.1
+sentence-transformers~=3.2.1
